[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/TurnIndicator.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://src/Board.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Hand.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/TileStackDisplay.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/TileStack.tscn" type="PackedScene" id=7]

[node name="Main" type="Control"]
anchor_top = 0.000746841
anchor_right = 1.0
anchor_bottom = 1.00075
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 1 )]
stretch_mode = 1

[node name="TurnIndicator" parent="." instance=ExtResource( 2 )]

[node name="Board" parent="." instance=ExtResource( 4 )]
margin_left = 440.0
margin_top = 100.0
margin_right = 840.0
margin_bottom = 500.0

[node name="Player1Hand" parent="." instance=ExtResource( 5 )]
margin_left = 100.0
margin_top = 500.0
margin_right = -780.0
margin_bottom = -140.002

[node name="Player2Hand" parent="." instance=ExtResource( 5 )]
margin_left = 800.0
margin_top = 500.0
margin_right = -80.0
margin_bottom = -140.002

[node name="TileStack" parent="." instance=ExtResource( 7 )]

[node name="TileStackDisplay" parent="." instance=ExtResource( 6 )]
margin_left = 1022.4
margin_top = 9.79315
margin_right = -57.5952
margin_bottom = -590.207
